Polish voice typing overlay: use spec colors, fix toolbar button rounding, render via portal to avoid clipping

--- a/src/components/tiles/text/text-tile.scss
+++ b/src/components/tiles/text/text-tile.scss
@@ -23,7 +23,7 @@
   }
 
   &.voice-typing-active .text-tool {
-    background-color: $workspace-teal-light-4;
+    background-color: $workspace-teal-light-7;
   }
 
   .highlight-chip {
