--- a/src/plugins/drawing/components/drawing-tile.scss
+++ b/src/plugins/drawing/components/drawing-tile.scss
@@ -207,7 +207,7 @@
           resize: none;
 
           &.voice-typing-active {
-            background-color: $workspace-teal-light-4;
+            background-color: $workspace-teal-light-7;
           }
         }
       }
